# ccs-cost-models

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_SOURCES.md  LICENSE  LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/components/: charts.py  formation_selector.py  result_display.py
app/pages/: 1_Evaluate.py  2_Compare.py  3_Uncertainty.py
data/netl-extracted/: area_and_corrective_data.json  cost_items.csv  cost_reference_detailed.json  escalation_indices.json  formations.json  pipeline_reference.json  reference_values.json  storage_coefficients.json
data/reference/: assumptions_register.yaml  cepci_annual.csv  cost_basis_2024.yaml  data_quality_register.yaml  escalation_weights.yaml  model_limitations.md  ncs_drilling_model.yaml  pipeline_cost_models.yaml  pipeline_validation.yaml  standard_pipe_sizes.yaml  storage_coefficients.json  validation_design.yaml  verification_cases.yaml  well_cost_reference.yaml
docs/: api-reference.md  methodology.md  user-guide.md
examples/: 01_evaluate_us_goa.py  02_compare_formations.py  03_co2_properties.py  README.md  agent_tool_use.md
src/ccs_costs/: __init__.py  __main__.py  analysis.py  config.py  history.py  scenario.py  server.py
tests/: conftest.py
tests/test_costs/: test_drilling.py  test_pipeline.py
tests/test_finance/: test_cashflow.py  test_solver.py
tests/test_geo/: test_injectivity.py  test_storage.py
tests/test_integration/: conftest.py  test_scenario.py
tests/test_thermo/: test_brine.py  test_co2.py
tests/test_validation/: test_calibration.py
(+43 files in other folders)
